[package]
name = "bellatrix_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-web = "3.3.3"
jwt = "0.16.0"
hmac = "0.12.0"
sha2 = "0.10.1"
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["sqlite"] }


#diesel = { version = "2.0.0", path = "../../../diesel", features = ["sqlite"] }

#[[bin]]
#name = "show_posts"
#doc = false

#[[bin]]
#name = "write_post"
#doc = false

#[[bin]]
#name = "delete_post"
#doc = false

#[[bin]]
#name = "publish_post"
#doc = false

[lib]
doc = false


